<resources>
    <string name="app_name">My Application</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="search">SEARCH</string>
    <string name="search_hint">Search a place</string>
    <string name="nearByResponse">nearByResponse </string>
    <string name="warning_no_opening_hours"> Warning: Open hours is not available </string>
    <string name="filter_fragment">Filter</string>
    <string name="petrol_station">Petrol Station</string>
    <string name="hospital">Hospital</string>
    <string name="restaurant">Restaurant</string>
    <string name="car_park">Car Park</string>
    <string name="facility_place_name">Place Name</string>
    <string name="rating_view">Filter by Rating</string>
    <string name="place_address">Place Address</string>
    <string name="is_open_button">Filter by Hours</string>
    <string-array name="filter_array">
        <item>Ratings</item>
        <item>Opening Hours</item>
    </string-array>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="random_button_text">Random</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Wassup Bitches</string>
    <string name="random_heading">Here is a random number between 0 and %d.</string>
    <string name="toast_button_text">Toast</string>
    <string name="login_button_text">Log In</string>
    <string name="register_button_text">Sign Up</string>
    <string name="forgotpassword_button_text">Forgot your password?</string>
    <string name="logout_button_text">Log Out</string>

    <string name="fullname_field_text">  Full Name</string>
    <string name="email_field_text">  Email</string>
    <string name="password_field_text">  Password</string>
    <string name="confirmpassword_field_text">  Confirm Password</string>
    <string name="mobile_field_text">Mobile Number</string>


    <string name="registration_prompt">Don\'t have an account? Register <b>here</b></string>

    <string name="login_prompt_1">Already have an account? </string>
    <string name="login_prompt_2">Log in</string>
    <string name="registration_google">Sign up with Google Account</string>
    <string name="login_google">Log in with Google Account</string>

    <string name="resetPassword_button">Reset Password</string>

    <string name="title_activity_login">Login Activity</string>
    <string name="title_activity_register">Register User Activity</string>

    <string name="profile_header">Profile</string>
    <string name="profile_fullName">Full Name: </string>
    <string name="profile_email">Email: </string>
    <string name="title_activity_login_google">LoginGoogle</string>
    <string name="next">Next</string>

    <string name="logo_desc">Automate App Logo</string>

    <string name="home_welcome">Welcome</string>

    <string name="add_contact_button">Press to Add Contact</string>
    <string name="emergency_contacts">Emergency Contacts</string>
    <string name="contact_text">Contact: </string>
    <string name="email_text">Email: </string>
    <string name="add_contact">Add Contact</string>


    <string name="web_client_id">1075556160577-tduqotabblpf3rdug06iaorp1nq5ij4r.apps.googleusercontent.com</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="added_contact">Contact has been added successfully!</string>
    <string name="error">%1$s</string>
    <string name="press_to_go_back">Press to go back</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="fullName_example">Mira Lu Ju Tin</string>
    <string name="email_example">miralujutin@gmail.com</string>
    <string name="calling_text">Calling...</string>
    <string name="police_number_text">999</string>
    <string name="emergency_button">Emergency Button</string>
    <string name="show_direction_on_map">Show direction on Map</string>
    <string name="place_name">Place Name</string>
    <string name="address">Address</string>
    <string name="details">Details</string>
    <string name="availability">Availability:</string>
</resources>