<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".RegisterUserActivity">


    <EditText
        android:id="@+id/fullname_field"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/text_input_button"
        android:drawableStart="@drawable/ic_person_red"
        android:drawablePadding="12dp"
        android:ems="18"
        android:hint="@string/fullname_field_text"
        android:padding="10dp"
        android:textColorHint="@color/grey_dark"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/email_field"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/text_input_button"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="12dp"
        android:ems="18"
        android:hint="@string/email_field_text"
        android:padding="10sp"
        android:textColorHint="@color/grey_dark"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fullname_field" />

    <EditText
        android:id="@+id/password_field"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/text_input_button"
        android:drawableStart="@drawable/ic_password"
        android:drawablePadding="12dp"
        android:ems="18"
        android:hint="@string/password_field_text"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColorHint="@color/grey_dark"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_field" />

    <EditText
        android:id="@+id/confirmpassword_field"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:background="@drawable/text_input_button"
        android:drawableStart="@drawable/ic_password"
        android:drawablePadding="12dp"
        android:ems="18"
        android:hint="@string/confirmpassword_field_text"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColorHint="@color/grey_dark"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_field"
        app:layout_constraintVertical_bias="0.019" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/login_button"
        android:ems="18"
        android:letterSpacing="0.01"

        android:text="@string/register_button_text"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmpassword_field"
        app:layout_constraintVertical_bias="0.095" />

    <TextView
        android:id="@+id/prompt_login_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="236dp"

        android:fontFamily="@font/inter_bold"
        android:text="@string/login_prompt_2"
        android:textColor="@color/red_dark"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.71"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_button" />

    <TextView
        android:id="@+id/prompt_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="236dp"

        android:fontFamily="@font/inter"
        android:text="@string/login_prompt_1"
        android:textColor="@color/red_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.374"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_button" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="151dp"
        android:layout_height="148dp"
        android:layout_marginTop="4dp"
        android:src="@drawable/main_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>