<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".views.LoginActivity">

    <!--EMAIL FIELD-->
    <!--hint: text disappears when user types-->

    <!--PASSWORD FIELD-->

    <EditText
        android:id="@+id/email_field"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:inputType="textEmailAddress"
        android:layout_marginTop="4dp"
        android:background="@drawable/text_input_button"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="12dp"
        android:importantForAutofill="no"
        android:ems="18"
        android:hint="@string/email_field_text"
        android:padding="10dp"
        android:textColorHint="@color/grey_dark"
        android:textSize="16sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/password_field"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/text_input_button"
        android:drawableStart="@drawable/ic_password"
        android:drawablePadding="12dp"
        android:ems="18"
        android:hint="@string/password_field_text"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColorHint="@color/grey_dark"
        android:textSize="16sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_field" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/login_button"
        android:ems="18"
        android:letterSpacing="0.01"

        android:text="@string/login_button_text"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_field"
        app:layout_constraintVertical_bias="0.076" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="183dp"
        android:layout_height="199dp"
        android:layout_marginTop="4dp"
        android:src="@drawable/main_logo"
        android:contentDescription="@string/logo_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/loginGoogle_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prompt_registration"
        app:layout_constraintVertical_bias="0.131" />

    <Button
        android:id="@+id/forgotpassword_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:background="@android:color/transparent"
        android:fontFamily="@font/inter_bold"
        android:letterSpacing="0.01"

        android:padding="0dp"
        android:text="@string/forgotpassword_button_text"

        android:textAllCaps="false"
        android:textColor="@color/red_dark"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_button"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/prompt_registration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter"
        android:text="@string/registration_prompt"

        android:textColor="@color/red_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgotpassword_button"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>