<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:backgroundTint="@null"
    tools:context=".views.ForgotPasswordActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="183dp"
        android:layout_height="199dp"
        android:layout_marginTop="4dp"
        android:src="@drawable/main_logo"
        android:contentDescription="@string/logo_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/email_field"
        android:inputType="textEmailAddress"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/text_input_button"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="12dp"
        android:ems="18"
        android:hint="@string/email_field_text"
        android:padding="10dp"
        android:importantForAutofill="no"
        android:textColorHint="@color/grey_dark"
        android:textSize="16sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <Button
        android:id="@+id/resetPassword_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/login_button"
        android:ems="18"
        android:letterSpacing="0.01"
        android:text="@string/resetPassword_button"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:backgroundTint="@null"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_field" />

</androidx.constraintlayout.widget.ConstraintLayout>